--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Aluna Any</title>
+    <link rel="stylesheet" href="estilo.css">
   </head>
   <body>
-    <h1>Pagina da Eduarda</h1>
-    <p>Turma:1I - NEMERO:8</p>
-  </body>
-</html>
+    <h1>Pagina da Any</h1>
+    <p>Turma: 1I - Numero: 04</p>
+
 <div class="caixa1">
 </div>
 <div class="caixa2">
