--- a/pagina01.html
+++ b/pagina01.html
@@ -16,6 +16,9 @@
               </ul>
           </nav>
     </div>
+    <div class="caixaAbelha.png">
+       <img id="abelha" src="abelha.png" alt="">
+    </div>
     
 </body>
 </html>
