--- a/pagina02.html
+++ b/pagina02.html
@@ -16,5 +16,8 @@
             </ul>
         </nav>
     </div>
+    <div class="caixaAbelha2.png">
+        <img id="abelha" src="abelha.png" alt="">
+    </div>
 </body>
 </html>
