--- a/index.html
+++ b/index.html
@@ -4,15 +4,27 @@
     <meta charset="utf-8">
     <title>Aluna Any</title>
     <link rel="stylesheet" href="estilo.css">
-  </head>
-  <body>
-    <h1>Pagina da Any</h1>
-    <p>Turma: 1I - Numero: 04</p>
-
-<div class="caixa1">
-</div>
-<div class="caixa2">
-
-</div>
+   <H1>Pagina da Any</h1>
 </body>
 </html>
+</HEad>
+<BOdy>
+  <div class="menuPrincipal">
+          <nav>
+              <ul>
+                  <li><a href="intex.html">Home</a></li>
+                  <li><a href="pagina01.html">Pagina 01</a></li>
+                  <li><a href="pagina02.html">Pagina 02</a></li>
+              </ul>
+          </nav>
+  </div>
+   <div class="='conteudo">
+    <h1>Evolução da MODA</h1>
+      <P>Ao longo dos anos obtivemos diversas transformações. Já tivemos muitos acertos mais também muitos
+        
+      </P>
+   </div>
+  <div class="rodape">
+    Aluna: Any Taynara - Numero:04 1-I
+  </div>
+  </BOdy>
