--- a/index.html
+++ b/index.html
@@ -19,10 +19,17 @@
           </nav>
   </div>
    <div class="='conteudo">
-    <h1>Evolução da MODA</h1>
-      <P>Ao longo dos anos obtivemos diversas transformações. Já tivemos muitos acertos mais também muitos
-        
-      </P>
+    <h1>AMIZADADE</h1>
+      <P>Amizadade é a coisa mais loca que pode acontecer na nossa vida.</P>
+      <p>Mas ao mesmo tempo a melhor. Já ouvimos muitas histórias com a seguinte frase "Quando eu te conheci
+      te achava metida" ou até mesmo "Achava vc mó chato". Quem nunca?</p>
+      <P>Podemos classificar isso em três pilares:</p>
+         <p> 1.O de outra mãe</p>
+         <p> 2.O colega</p>
+         <p>3.A falsa</p>
+         <p>Vamos começar pela falsa. Aqui aprecento os seus principios:</p>
+         <p>1.Falar pelas costas;</p>
+       
    </div>
   <div class="rodape">
     Aluna: Any Taynara - Numero:04 1-I
