--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
       <P>Podemos classificar isso em três pilares:</p>
          <p> 1.O de outra mãe</p>
          <p> 2.O colega</p>
-         <p>3.A falsa</p>
+         <p> 3.A falsa</p>
+          <h1></h1>
          <p>Vamos começar pela falsa. Aqui aprecento os seus principios:</p>
          <p>1.Falar pelas costas;</p>
+         <P>2.Se comunica de forma mais agreciva /P>
        
    </div>
   <div class="rodape">
